# MeshTalk

./: .gitignore  CMakeLists.txt  run.sh  writeup.md
.commandcode/taste/: taste.md
docs/: README.md  architecture.md  cli.md  crypto.md  file-transfer.md  identity.md  networking.md  ui.md
proto/: chat.proto  discovery.proto  envelope.proto
scripts/: run_tmux_demo.sh
src/: combined.txt  main.cpp
src/chat/: ChatServer.cpp  ChatServer.h
src/crypto/: KeyManager.cpp  KeyManager.h  SessionManager.cpp  SessionManager.h
src/db/: DatabaseManager.cpp  DatabaseManager.h  SqliteTest.cpp  SqliteTest.h
src/discovery/: UdpHelloBroadcaster.cpp  UdpHelloBroadcaster.h
src/ui/: TerminalUI.cpp  TerminalUI.h
